# DeepRobotics_Lite3_RL

./: .gitignore  CMakeLists.txt  README.md
models/description/mjcf/: Lite3_stair.xml
simulation/: mujoco_simulation.py  newton_simulation.py  requirements_newton.txt
src/: lite3_test_policy_runner_onnx.cpp  lite3_test_policy_runner_onnx.hpp
